name:                prometheus-client
version:             0.1.0.0
synopsis:            Haskell client library for http://prometheus.io.
-- description:
homepage:            https://github.com/fimad/prometheus-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  default-extensions:
      ExistentialQuantification
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , RankNTypes
    , TypeSynonymInstances
  exposed-modules:
      Prometheus
  other-modules:
      Prometheus.Info
    , Prometheus.Label
    , Prometheus.Export.Text
    , Prometheus.Metric
    , Prometheus.Metric.Counter
    , Prometheus.Metric.Gauge
    , Prometheus.Metric.Summary
    , Prometheus.Metric.TVar
    , Prometheus.Metric.Vector
    , Prometheus.MonadMetric
    , Prometheus.Registry
  build-depends:
      base               >=4.6 && <4.7
    , bytestring
    , containers
    , mtl
    , scientific
    , stm                >=2.3
    , transformers
    , utf8-string
  ghc-options: -W

test-suite spec
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    tests
  Main-is:           Spec.hs
  build-depends:
      base               >=4.6 && <4.7
    , hspec
    , prometheus-client
    , bytestring
    , random-shuffle
    , utf8-string
  ghc-options: -W -Werror

benchmark bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          Main.hs
  build-depends:
      base               >=4.6 && <4.7
    , bytestring
    , criterion
    , hspec
    , prometheus-client
    , random
    , utf8-string
  ghc-options: -W -Werror
