name:                prometheus-client
version:             0.1.0.0
synopsis:            Haskell client library for http://prometheus.io.
description:         Haskell client library for http://prometheus.io.
homepage:            https://github.com/fimad/prometheus-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
copyright:           2015 Will Coster
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/fimad/prometheus-haskell

library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  default-extensions:
      ExistentialQuantification
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , TypeSynonymInstances
  exposed-modules:
      Prometheus
  other-modules:
      Prometheus.Info
    , Prometheus.Label
    , Prometheus.Export.Text
    , Prometheus.Metric
    , Prometheus.Metric.Counter
    , Prometheus.Metric.Gauge
    , Prometheus.Metric.Summary
    , Prometheus.Metric.TVar
    , Prometheus.Metric.Vector
    , Prometheus.MonadMonitor
    , Prometheus.Registry
  build-depends:
      atomic-primops     >=0.4
    , base               >=4.6 && <4.8
    , bytestring
    , containers
    , mtl
    , stm                >=2.3
    , transformers
    , utf8-string
  ghc-options: -W

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  ghc-options:          -Wall
  main-is:              doctest.hs
  build-depends:
      base
    , doctest
    , prometheus-client

test-suite spec
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    tests
  main-is:           Spec.hs
  build-depends:
      base               >=4.6 && <4.8
    , hspec
    , prometheus-client
    , bytestring
    , random-shuffle
    , utf8-string
  ghc-options: -W

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   benchmarks
  main-is:          Main.hs
  build-depends:
      base               >=4.6 && <4.8
    , bytestring
    , criterion
    , hspec
    , prometheus-client
    , random
    , utf8-string
  ghc-options: -W
