name:                prometheus-client
version:             1.1.1
synopsis:            Haskell client library for http://prometheus.io.
description:         Haskell client library for http://prometheus.io.
homepage:            https://github.com/fimad/prometheus-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
copyright:           2015 Will Coster
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/fimad/prometheus-haskell

library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  exposed-modules:
      Prometheus
  other-modules:
      Prometheus.Info
    , Prometheus.Label
    , Prometheus.Export.Text
    , Prometheus.Metric
    , Prometheus.Metric.Counter
    , Prometheus.Metric.Gauge
    , Prometheus.Metric.Histogram
    , Prometheus.Metric.Observer
    , Prometheus.Metric.Summary
    , Prometheus.Metric.Vector
    , Prometheus.MonadMonitor
    , Prometheus.Registry
  build-depends:
      atomic-primops     >=0.4
    , base               >=4.7 && <5
    , bytestring         >=0.9
    , clock
    , containers
    , deepseq
    , primitive
    , mtl                >=2
    , stm                >=2.3
    , transformers
    , transformers-compat
    , utf8-string
    , exceptions
    , text
    , data-sketches
  ghc-options: -Wall

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  ghc-options:          -Wall
  main-is:              doctest.hs
  build-depends:
      base               >=4.7 && <5
    , doctest
    , prometheus-client

test-suite spec
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    src, tests
  main-is:           Spec.hs
  build-depends:
      QuickCheck
    , atomic-primops
    , base               >=4.7 && <5
    , bytestring
    , containers
    , clock
    , hspec
    , mtl
    , random-shuffle
    , stm
    , transformers
    , transformers-compat
    , utf8-string
    , deepseq
    , exceptions
    , text
    , primitive
    , data-sketches
  ghc-options: -Wall

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   benchmarks
  main-is:          Main.hs
  build-depends:
      base               >=4.7 && <5
    , bytestring
    , criterion          >=1.2
    , prometheus-client
    , random
    , utf8-string
    , text
  ghc-options: -Wall
