name:                prometheus-metrics-ghc
version:             1.0.1
synopsis:
    Metrics exposing GHC runtime information for use with prometheus-client.
description:
    Metrics exposing GHC runtime information for use with prometheus-client.
homepage:            https://github.com/fimad/prometheus-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
copyright:           2015 Will Coster
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/fimad/prometheus-haskell

library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  exposed-modules:
      Prometheus.Metric.GHC
  build-depends:
      base               >=4.7 && <5
    , prometheus-client  >=1.0.0 && <1.1
    , utf8-string        >=0.3
    , text
  ghc-options: -Wall

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  ghc-options:          -Wall
  main-is:              doctest.hs
  build-depends:
      base               >=4.7 && <5
    , doctest
    , prometheus-client
